--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.6",
     "@astrojs/preact": "^4.1.1",
     "@astrojs/rss": "^4.0.12",
     "astro": "^5.14.1",
